--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -3,6 +3,6 @@
   <%= simple_form_for [@family, @child] do |form| %>
     <%= form.input :first_name, label: "First Name", input_html: { class: "form-control" } %>
     <%= form.input :last_name, label: "Last Name", input_html: { class: "form-control" } %>
-    <%= form.input :birth_date, as: :date, label: "Birth Date", input_html: { class: "form-control" } %>
+    <%= form.input :birth_date, as: :string, label: "Birth Date", input_html:{ data: { controller: "datepicker" } } %>
     <%= form.submit "Create Child", class: "btn btn-flat" %>
   <% end %>
