--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,13 +12,8 @@
 @import "components/index";
 @import "pages/index";
 
-
 body {
   background-color: white;
-}
-
-.container{
-  margin: 0px 30px;
 }
 
 .word-highlight {
@@ -31,4 +26,12 @@ body {
 
 .main-title {
   font-size: 70px;
+}
+
+.current-user-bg {
+  background-color: $calendar-current-user;
+}
+
+.second-user-bg {
+  background-color: $calendar-second-user;
 }
