--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -9,7 +9,20 @@
     color: white;
     padding: 8px 24px;
     border-radius: 4px;
-    background: #1edd88;
+    background: $calendar-current-user;
+  }
+
+  .user-one-highlight-day {
+    color: white;
+    padding: 8px 24px;
+    border-radius: 4px;
+    background: $calendar-current-user;
+  }
+  .user-two-highlight-day {
+    color: white;
+    padding: 8px 24px;
+    border-radius: 4px;
+    background: $calendar-second-user;
   }
 }
 
