--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,3 +26,5 @@ $border-radius-xl: 0.5rem;
 $border-radius-xxl: 1rem;
 
 // Override other variables below!
+$calendar-current-user: $green-calendar;
+$calendar-second-user: $yellow-calendar;
