--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,3 +16,6 @@ $orange: #e67e22;
 // $green: #1edd88;
 // $gray: #0e0000;
 // $light-gray: #f4f4f4;
+
+$green-calendar: #1edd88;
+$yellow-calendar: #b7da1d;
