--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -57,15 +57,22 @@
     </div>
     <div class="col-9">
       <% if @days_and_guards.present? %>
-        <p><%= @days_and_guards.first[:user] %></p>
+        <p class="current-user-bg">Current User = <%=current_user.first_name%></p>
+        <%other_user = @days_and_guards.find { |guard| guard[:user] != current_user.first_name }%>
+         <% if other_user.present? %>
+        <p class="second-user-bg">Other User = <%= other_user[:user] %></p>
+        <% else %>
+        <p>no other user</p>
+        <% end %>
       <% else %>
         <p>No guards available</p>
       <% end %>
-
-       <%= month_calendar do |date| %>
+      <p><%=@days_and_guards%></p>
+        <%= month_calendar do |date| %>
         <% day_name = date.strftime("%A") %>
         <div data-controller="highlight"
-            data-highlight-selected-days-value="<%= @days_and_guards.to_json %>">
+            data-highlight-selected-days-value="<%= @days_and_guards.to_json %>"
+            data-highlight-user-value="<%= current_user.first_name %>">
           <div class="guard-day"><%= day_name %></div>
         </div>
         <%= date %>
