--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,12 +14,9 @@
 
 
 body {
-  background-color: white;
+  background-color: hwb(0 100% 0%);
 }
 
-.container{
-  margin: 0px 30px;
-}
 
 .word-highlight {
   color: $green;
