--- a/app/assets/stylesheets/components/_btn_flat.scss
+++ b/app/assets/stylesheets/components/_btn_flat.scss
@@ -1,8 +1,8 @@
 .btn-flat {
   color: $white;
   padding: 15px 24px;
-  width:40px;
-  border-radius: 10px;
+  width:auto;
+  border-radius: 40px;
   background: $green;
   transition: background 0.3s ease;
   text-decoration: none;
