--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,20 @@
+.card{
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  transition: box-shadow 500ms;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.card:hover {
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+
 .card-link {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   width: 100%;
+
 }
