--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="row homepage justify-content-center">
       <div class="col-5 justify-content-center">
-        <%= image_tag "family.png", class:"img-fluid" %>
+        <%= image_tag "family.png", class:"img-fluid slide-right" %>
       </div>
       <div class="col-7 my-auto">
         <div class="align-items-center">
@@ -12,7 +12,61 @@
           what truly matters: your children's well-being.</p>
         </div>
         <div class="pt-3">
-          <%= link_to "Get started", new_user_registration_path, class:"cta btn-flat text-left" %>
+          <%= link_to "Get started", new_user_registration_path, class:"cta btn-flat text-left" , data: { bs_toggle: "modal", bs_target: "#exampleModalCenter" }  %>
         </div>
+
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Create an account</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <!-- Modal body -->
+              <div class="modal-body">
+              <% @resource = resource_name.to_s.camelize.constantize.new %>
+              <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= f.error_notification %>
+
+              <div class="form-inputs">
+                <%= f.input :first_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "first_name" }%>
+                <%= f.input :last_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "last_name" }%>
+                <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+                <%= f.input :password,
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" } %>
+                <%= f.input :password_confirmation,
+                  required: true,
+                  input_html: { autocomplete: "new-password" } %>
+              </div>
+
+              <!-- Modal body -->
+              <div class="modal-footer">
+                <%= f.button :submit, "Sign up", class:"btn btn-flat"  %>
+              </div>
+              <% end %>
+
+              <!-- Additional links -->
+              <div class="mt-3">
+                <%= render "devise/shared/links" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
