--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -3,7 +3,7 @@
     min-height: 80vh;
   }
   .today {
-    background-color: #faf3dd;
+    background-color: $primary;
   }
   .highlight-day {
     color: white;
