--- a/app/assets/stylesheets/components/_event.scss
+++ b/app/assets/stylesheets/components/_event.scss
@@ -3,7 +3,10 @@
   margin-bottom: 15px;
 }
 
-.form-input, .form-textarea, .form-checkbox, .form-select {
+.form-input,
+.form-textarea,
+.form-checkbox,
+.form-select {
   width: 100%;
   padding: 10px;
   border: 1px solid #ddd;
