--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,9 +4,9 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "calendar";
-@import "modal";
+// @import "modal";
 @import "btn_ghost";
 @import "btn_flat";
 @import "card";
-@import "event";
-
+// @import "event";
+@import "footer";
