--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
   background-color: #b6c4c1; // Background color
   color: #f8f9fa; // Text color
-  padding: 1rem 0;
-  font-family: 'Roboto', sans-serif;
+  // padding: 1rem 0;
+  font-family: "Roboto", sans-serif;
   font-size: 0.8rem;
   margin-top: 32px;
 
@@ -32,7 +32,8 @@
     margin-bottom: 0.3rem;
   }
 
-  p, a {
+  p,
+  a {
     margin: 0;
     line-height: 1.2;
     color: #f8f9fa;
