--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -6,72 +6,84 @@
   <div class="row">
     <div class="col-3">
       <% if current_user.family %>
-      <h3>Family Members :</h3>
-      <%current_user.family.family_members.each do |member|%>
-      <p>
-        <%=member.user.first_name%>
-       <% if member.is_parent %>
-        (parent)
-        <% end %>
-      </P>
-      <%end%>
+
+      <div class="card-dashboard p-3">
+        <h3>Family Members :</h3>
+        <div class="card-body">
+
+          <%current_user.family.family_members.each do |member|%>
+          <p>
+            <%=member.user.first_name%>
+           <% if member.is_parent %>
+            (parent)
+            <% end %>
+          </P>
+          <%end%>
+        </div>
+      </div>
 
       <p><%= link_to "Add a Child", new_family_child_path(current_user.family), class: "btn btn-flat" %></p>
-      <h3>Children:</h3>
+
       <% if @children.any? %>
-        <ul>
-          <% @children.each do |child| %>
-            <li>
-              <strong><%= child.first_name %> <%= child.last_name %></strong>, born on <%= child.birth_date %> <br>
-
-                <%= link_to "Edit", edit_child_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to 'Delete', child_path(child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: "btn no-border hover-effect" %>
-                <%= link_to "Guard", new_child_guard_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Event", new_child_event_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Expenses", child_expenses_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Documents", documents_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Events", child_events_path(child), class: "btn no-border hover-effect" %>
-
-
-
-            </li>
-          <% end %>
-        </ul>
+        <div class="card-dashboard p-3">
+          <h3>Children:</h3>
+          <div class="card-body ">
+            <ul>
+              <% @children.each do |child| %>
+                <li>
+                  <strong><%= child.first_name %> <%= child.last_name %></strong>, born on <%= child.birth_date %> <br>
+                    <%= link_to "Edit", edit_child_path(child), class: "btn no-border hover-effect" %>
+                    <%= link_to 'Delete', child_path(child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: "btn no-border hover-effect" %>
+                    <%= link_to "Guard", new_child_guard_path(child), class: "btn no-border hover-effect" %>
+                    <%= link_to "Event", new_child_event_path(child), class: "btn no-border hover-effect" %>
+                    <%= link_to "Expenses", child_expenses_path(child), class: "btn no-border hover-effect" %>
+                    <%= link_to "Documents", documents_path(child), class: "btn no-border hover-effect" %>
+                    <%= link_to "Events", child_events_path(child), class: "btn no-border hover-effect" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
       <% else %>
         <p>No children added yet.</p>
       <% end %>
-      <h3>Send an invitation</h3>
-      <p><%= render 'invitations/form'%></p>
-      <%end%>
-      <h3>Invitations</h3>
 
-      <% @invitations.each do |invitation| %>
-      <div>
-      <p>sent to <%=invitation.recipient.email%></p>
-      <p>Status: <%= invitation.status %></p>
-
-
-      <% if invitation.status == 'pending' %>
-        <%= link_to 'Accept', accept_invitation_path(invitation), method: :patch %>
-        <%= link_to 'cancel', reject_invitation_path(invitation), method: :patch %>
-      <% end %>
+      <div class="card-dashboard p-3">
+        <h3>Send an invitation</h3>
+        <div class="card-body ">
+          <p><%= render 'invitations/form'%></p>
+        </div>
       </div>
-      <% end %>
+      <%end%>
 
 
-
-      <% @invits.each do |invitation| %>
-        <div>
-          <p>Invitations received from: <%= invitation.family.name %></p>
-          <p>sent by <%=invitation.user.email%> </p>
+      <div class="card-dashboard p-3">
+        <h3>Invitations</h3>
+        <div class="card-body">
+          <% @invitations.each do |invitation| %>
+          <div>
+          <p>sent to <%=invitation.recipient.email%></p>
           <p>Status: <%= invitation.status %></p>
-          <p><%=invitation.id%></p>
           <% if invitation.status == 'pending' %>
-            <%= button_to 'Accept',  accept_invitation_path(invitation), method: :patch , data: {confirm: "Are you sure ? "}%>
-            <%= button_to 'Reject',  reject_invitation_path(invitation), method: :patch %>
+            <%= link_to 'Accept', accept_invitation_path(invitation), method: :patch %>
+            <%= link_to 'cancel', reject_invitation_path(invitation), method: :patch %>
+          <% end %>
+          </div>
+          <% end %>
+          <% @invits.each do |invitation| %>
+            <div>
+              <p>Invitations received from: <%= invitation.family.name %></p>
+              <p>sent by <%=invitation.user.email%> </p>
+              <p>Status: <%= invitation.status %></p>
+              <p><%=invitation.id%></p>
+              <% if invitation.status == 'pending' %>
+                <%= button_to 'Accept',  accept_invitation_path(invitation), method: :patch , data: {confirm: "Are you sure ? "}%>
+                <%= button_to 'Reject',  reject_invitation_path(invitation), method: :patch %>
+              <% end %>
+            </div>
           <% end %>
         </div>
-      <% end %>
+      </div>
     </div>
 
     <div class="col-9">
