--- a/app/assets/stylesheets/components/_btn_flat.scss
+++ b/app/assets/stylesheets/components/_btn_flat.scss
@@ -1,15 +1,10 @@
 .btn-flat {
   color: $white;
-
-  padding: 15px 24px;
-  width:auto;
+  padding: 10px 20px;
+  min-width:125px;
   border-radius: 40px;
   background: $green;
-
-  padding: 8px 24px;
-
   background: $primary;
-
   transition: background 0.3s ease;
   text-decoration: none;
 }
