--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,12 +1,12 @@
 
 .modal {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  display: flex;
+  //display: flex;
   align-items: center;
   justify-content: center;
 
@@ -71,7 +71,7 @@
         border-radius: 4px;
 
         &:hover {
-          background: #218838;
+          background: $green;
         }
       }
     }
