--- a/app/views/guards/new.html.erb
+++ b/app/views/guards/new.html.erb
@@ -1,43 +1,1 @@
-<h1>New Guard</h1>
-
-<h2>One week pattern</h2>
-
-<%@taken_day%>
-
-
-<%= simple_form_for([@child, @guard]) do |f| %>
-  <div class="form-group">
-    <%= f.input :monday, as: :boolean, label: "Monday", input_html: { class: "form-check-input", disabled: @taken_days.include?("monday") } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.input :tuesday, as: :boolean, label: "Tuesday", input_html: { class: "form-check-input", disabled: @taken_days.include?("tuesday") } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.input :wednesday, as: :boolean, label: "Wednesday", input_html: { class: "form-check-input", disabled: @taken_days.include?("wednesday") } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.input :thursday, as: :boolean, label: "Thursday", input_html: { class: "form-check-input", disabled: @taken_days.include?("thursday") } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.input :friday, as: :boolean, label: "Friday", input_html: { class: "form-check-input", disabled: @taken_days.include?("friday") } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.input :saturday, as: :boolean, label: "Saturday", input_html: { class: "form-check-input", disabled: @taken_days.include?("saturday") } %>
-  </div>
-
-  <div class="form-group">
-    <%= f.input :sunday, as: :boolean, label: "Sunday", input_html: { class: "form-check-input", disabled: @taken_days.include?("sunday") } %>
-  </div>
-
-  <%= f.hidden_field :child_id, value: @child.id %>
-  <%= f.hidden_field :user_id, value: current_user.id %>
-
-  <div class="form-group">
-    <%= f.submit "Create Guard", class: "btn btn-flat" %>
-  </div>
-<% end %>
+<%= render "new", child: @child, guard: @guard, taken_days: @taken_days || [] %>
