--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,13 @@
 @import "components/index";
 @import "pages/index";
 
+// dropzone (drag & drop)
+@import "variables";
+@import "dropzone";
+@import "config/variables";
+
 body {
-  background-color: white;
+  background-color: hwb(0 100% 0%);
 }
 
 .word-highlight {
