--- a/app/assets/stylesheets/components/_btn_flat.scss
+++ b/app/assets/stylesheets/components/_btn_flat.scss
@@ -1,13 +1,34 @@
 .btn-flat {
   color: $white;
-  padding: 8px 24px;
-  border-radius: 4px;
+
+  padding: 15px 24px;
+  width:auto;
+  border-radius: 40px;
   background: $green;
+
+  padding: 8px 24px;
+
+  background: $primary;
+
   transition: background 0.3s ease;
   text-decoration: none;
 }
 
 .btn-flat:hover {
+  background: $dark-green;
+  color: white;
+}
+
+.btn-flat-second-user {
+  color: $white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: $calendar-second-user;
+  transition: background 0.3s ease;
+  text-decoration: none;
+}
+
+.btn-flat-second-user:hover {
   background: $dark-green;
   color: white;
 }
