--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -3,7 +3,7 @@
     min-height: 80vh;
   }
   .today {
-    background-color: #faf3dd;
+    background-color: #FAF3DD;
   }
   .highlight-day {
     color: white;
@@ -26,7 +26,7 @@
   }
 }
 
-.meeting {
+.event {
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
@@ -34,7 +34,7 @@
   transition: background 0.3s ease;
 }
 
-.meeting:hover {
+.event:hover {
   background: #1bcb7f;
   color: white;
 }
