--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,87 +1,139 @@
 <h1 class="text-md-center">Welcome to your Dashboard, <%= current_user.first_name %>!</h1>
 
 <h2 class="text-md-center">Your family : <%= current_user.family ? current_user.family.name : link_to("Create your family", new_family_path) %></h2>
-
 <div class="container">
   <div class="row">
     <div class="col-3">
-
       <% if current_user.family %>
-      <h3>Family Members :</h3>
-      <%current_user.family.family_members.each do |member|%>
-      <p>
-        <%=member.user.first_name%>
-       <% if member.is_parent %>
-        (parent)
-        <% end %>
-      </P>
-      <%end%>
+
+      <div class="card-dashboard p-3">
+        <h3>Family Members :</h3>
+        <div class="card-body">
+          <% current_user.family.family_members.each do |member| %>
+          <p>
+            <%= member.user.first_name %>
+            <% if member.is_parent %>
+              (parent)
+            <% end %>
+          </p>
+          <% end %>
+        </div>
+      </div>
 
       <p><%= link_to "Add a Child", new_family_child_path(current_user.family), class: "btn btn-flat" %></p>
-      <h3>Children:</h3>
 
       <% if @children.any? %>
-        <ul>
-          <% @children.each do |child| %>
-            <li>
-              <strong><%= child.first_name %> <%= child.last_name %></strong>, born on <%= child.birth_date %> <br>
-
-                <%= link_to "Edit", edit_child_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to 'Delete', child_path(child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: 'btn no-border hover-effect' %>
-                <%= link_to "Guard", new_child_guard_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Event", new_child_event_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Expenses", child_expenses_path(child), class: "btn no-border hover-effect" %>
-                <%= link_to "Events", child_events_path(child), class: "btn no-border hover-effect" %>
-
-            </li>
-          <% end %>
-        </ul>
+        <div class="card-dashboard p-3">
+          <h3>Children:</h3>
+          <div class="card-body">
+            <ul>
+              <% @children.each do |child| %>
+                <li>
+                  <strong><%= child.first_name %> <%= child.last_name %></strong>, born on <%= child.birth_date %> <br>
+                  <%= link_to "Edit", edit_child_path(child), class: "btn no-border hover-effect" %>
+                  <%= link_to 'Delete', child_path(child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: "btn no-border hover-effect" %>
+                  <%= link_to "Guard", new_child_guard_path(child), class: "btn no-border hover-effect" %>
+                  <%= link_to "Event", new_child_event_path(child), class: "btn no-border hover-effect" %>
+                  <%= link_to "Expenses", child_expenses_path(child), class: "btn no-border hover-effect" %>
+                  <%= link_to "Documents", documents_path(child), class: "btn no-border hover-effect" %>
+                  <%= link_to "Events", child_events_path(child), class: "btn no-border hover-effect" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
       <% else %>
         <p>No children added yet.</p>
       <% end %>
 
-      <h3>Send an invitation</h3>
-      <p><%= render 'invitations/form'%></p>
-      <%end%>
-      <h3>Invitations</h3>
+      <div class="card-dashboard p-3">
+        <h3>Send an invitation</h3>
+        <div class="card-body">
+          <p><%= render 'invitations/form' %></p>
+        </div>
+      </div>
+      <% end %>
 
-
-      <% @invits.each do |invitation| %>
-        <div>
-          <p>Invitations received from: <%= invitation.family.name %></p>
-          <p>sent by <%=invitation.user.email%> </p>
-          <p>Status: <%= invitation.status %></p>
-          <p><%=invitation.id%></p>
-          <% if invitation.status == 'pending' %>
-            <%= button_to 'Accept',  accept_invitation_path(invitation), method: :patch , data: {confirm: "Are you sure ? "}%>
-            <%= button_to 'Reject',  reject_invitation_path(invitation), method: :patch %>
+      <div class="card-dashboard p-3">
+        <h3>Invitations</h3>
+        <div class="card-body">
+          <% @invitations.each do |invitation| %>
+            <div>
+              <p>Sent to: <%= invitation.recipient.email %></p>
+              <p>Status: <%= invitation.status %></p>
+              <% if invitation.status == 'pending' %>
+                <%= link_to 'Accept', accept_invitation_path(invitation), method: :patch %>
+                <%= link_to 'Cancel', reject_invitation_path(invitation), method: :patch %>
+              <% end %>
+            </div>
+          <% end %>
+          <% @invits.each do |invitation| %>
+            <div>
+              <p>Invitation received from: <%= invitation.family.name %></p>
+              <p>Sent by: <%= invitation.user.email %></p>
+              <p>Status: <%= invitation.status %></p>
+              <p>ID: <%= invitation.id %></p>
+              <% if invitation.status == 'pending' %>
+                <%= button_to 'Accept', accept_invitation_path(invitation), method: :patch, data: { confirm: "Are you sure?" } %>
+                <%= button_to 'Reject', reject_invitation_path(invitation), method: :patch %>
+              <% end %>
+            </div>
           <% end %>
         </div>
-      <% end %>
+      </div>
     </div>
 
     <div class="col-9">
       <% if @days_and_guards.present? %>
-        <p class="current-user-bg">Current User = <%=current_user.first_name%></p>
-        <%other_user = @days_and_guards.find { |guard| guard[:user] != current_user.first_name }%>
-         <% if other_user.present? %>
-        <p class="second-user-bg">Other User = <%= other_user[:user] %></p>
+        <button class="current-user-bg btn btn-flat"><%= current_user.first_name %></button>
+        <% other_user = @days_and_guards.find { |guard| guard[:user] != current_user.first_name } %>
+        <% if other_user.present? %>
+          <button class="second-user-bg btn btn-flat-second-user"><%= other_user[:user] %></button>
         <% else %>
-        <p>no other user</p>
+          <p>No other user</p>
         <% end %>
       <% else %>
         <p>No guards available</p>
       <% end %>
-        <%= month_calendar do |date| %>
-        <% day_name = date.strftime("%A") %>
-        <div data-controller="highlight"
-            data-highlight-selected-days-value="<%= @days_and_guards.to_json %>"
-            data-highlight-user-value="<%= current_user.first_name %>">
-          <div class="guard-day"><%= day_name %></div>
+
+
+
+      <!-- <%= @guards.first %> -->
+
+      <%= link_to 'Month view', dashboard_path(month: true) %>
+      <%= link_to 'Week view', dashboard_path(week: true) %>
+
+<% if (params[:month].nil? && params[:week].nil?) || (params[:month].present? && params[:month]) %>
+  <%= month_calendar(events: @events) do |date, events| %>
+    <% day_name = date.strftime("%A") %>
+    <div data-controller="highlight"
+         data-highlight-selected-days-value="<%= @days_and_guards.to_json %>"
+         data-highlight-user-value="<%= current_user.first_name %>">
+      <div class="guard-day"><%= day_name %></div>
+      <% events.each do |event| %>
+        <div class="event">
+          <p><%= event.title %></p>
+          <small><%= event.start_date.strftime("%d %b %Y") unless event.multi_days? %></small>
         </div>
-
       <% end %>
-
+    </div>
+  <% end %>
+<% elsif params[:week].present? && params[:week] %>
+  <%= week_calendar(events: @events) do |date, events| %>
+    <% day_name = date.strftime("%A") %>
+    <div data-controller="highlight"
+         data-highlight-selected-days-value="<%= @days_and_guards.to_json %>"
+         data-highlight-user-value="<%= current_user.first_name %>">
+      <div class="guard-day"><%= day_name %></div>
+      <% events.each do |event| %>
+        <div class="event">
+          <p><%= event.title %></p>
+          <small><%= event.start_date.strftime("%d %b %Y") unless event.multi_days? %></small>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+<% end %>
     </div>
   </div>
 </div>
